market controller